# ook

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  design.h  design_mkII.cpp
benchmarks/: CMakeLists.txt  newton_solver.cpp
cmake_modules/: ClangFormat.cmake  CppCheck.cmake
example/: CMakeLists.txt  nlgc_comparison.cpp  version.cpp
example/optimisers/: CMakeLists.txt  optimisers.cpp
example/validated_numerics/: CMakeLists.txt  gmw81.cpp  more_thuente94.cpp  sdrive.cpp  sdrive_diagco.cpp
examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bfgs.cpp  cholesky.h  cmake_install.cmake
examples/ook/: nlgc_comparison.cpp
examples/ook/optimisers/: CMakeLists.txt  optimisers.cpp
examples/ook/validated_numerics/: gmw81.cpp  more_thuente94.cpp
examples/optimisers/: CMakeLists.txt  bfgs.cpp  optimisers.cpp
examples/validated_numerics/: CMakeLists.txt  dcstep.cpp  dmain.f  gmw81.cpp  line_search.h  more_thuente.txt  more_thuente94.cpp  sdrive_diagco.cpp
include/: dcsrch.h  dcstep.h  linalg.hpp  line_search_conditions.h  linear_algebra.hpp  more_thuente.h  norms.h  ook.h  ook.hpp  optimise.h  optimiser_status.h  options.h  state.h  state_value.h
include/factorisations/: cholesky.h  gmw81.h  ldlt.h  tools.h
include/finite_differences/: backward_difference.h  central_difference.h  finite_differences.h  forward_difference.h  transform.h
include/linalg/: norms.hpp
include/linalg/blas/: ublas.hpp
include/linalg/lapack/: ublas.hpp
include/linalg/operations/: blaze.hpp  ublas.hpp
include/line_search/: dcstep.h  line_search_conditions.h  more_thuente.h  safe_step.h
include/line_search_methods/: bfgs.h  fletcher_reeves.h  line_search_method.h  newton.h  state.h  steepest_descent.h
include/line_search_methods/more_thuente/: more_thuente_searcher.h
include/linear_algebra/: blas.hpp  lapack.hpp  norms.hpp  operations.hpp  special_matrices.hpp  std_traits.hpp  traits.hpp
include/linear_algebra/blas/: blaze.hpp  ublas.hpp
include/linear_algebra/factorisations/: cholesky.hpp  gmw81.hpp  ldlt.hpp  tools.hpp
include/linear_algebra/lapack/: blaze.hpp  ublas.hpp
include/linear_algebra/operations/: blaze.hpp  ublas.hpp
include/linear_algebra/traits/: blaze.hpp  ublas.hpp
include/ook/: bfgs.h  bfgs.hpp  call_selector.h  call_selector.hpp  fletcher_reeves.h  fletcher_reeves.hpp  lbfgs.h  lbfgs.hpp  lbfgspp.h  line_search_method.h  line_search_method.hpp  matrix.hpp  message.h  message.hpp  newton.h  newton.hpp  nonlinear_cg.hpp  norms.h  optimiser_status.h  options.h  options.hpp  particle_swarm.h  state.h  state.hpp  steepest_descent.h  steepest_descent.hpp  stream_observer.h  stream_observer.hpp  type_traits.h  type_traits.hpp  vector.hpp  version.h  version.hpp
include/ook/factorisations/: cholesky.h  gmw81.h  ldlt.h  tools.h
include/ook/finite_differences/: backward_difference.h  backward_difference.hpp  central_difference.h  central_difference.hpp  finite_differences.h  finite_differences.hpp  forward_difference.h  forward_difference.hpp
include/ook/lbfgs/: lbfgs.h  lbfgs_options.hpp  mcsrch.h  mcstep.h  report.hpp
include/ook/line_search/: backtracking.h  backtracking.hpp  conditions.h  conditions.hpp  mcsrch.hpp  mcstep.hpp  mmt.hpp  more_thuente.h  more_thuente.hpp  nocedal_wright.h  options.hpp  step_functions.hpp
include/ook/line_search_methods/: bfgs.h  fletcher_reeves.h  line_search_method.h  message.h  newton.h  steepest_descent.h
include/ook/test_functions/: line_search.h  line_search.hpp  line_search_functions.h  more_garbow_hillstrom.h  more_garbow_hillstrom.hpp  parabola.h  parabola.hpp
include/schemes/: newton.h  state.h
include/test_functions/: more_garbow_hillstrom.h  parabola.h
include/test_functions/more_garbow_hillstrom/: bard.h  beale.h  biggs_exp6.h  box_3d.h  brown_almost_linear.h  brown_badly_scaled.h  brown_dennis.h  broyden_banded.h  broyden_tridiagonal.h  chebyquad.h  discrete_boundary_value.h  discrete_integral_equation.h  extended_powell_singular.h  extended_rosenbrock.h  freudenstein_roth.h  gaussian.h  gulf_rnd.h  helical_valley.h  jenrich_sampson.h  kowalik_osborne.h  linear_full_rank.h  linear_rank_1.h  linear_rank_1_with_0_cols_rows.h  meyer.h  osborne_1.h  osborne_2.h  penalty_i.h  penalty_ii.h  powell_badly_scaled.h  powell_singular.h  rosenbrock.h  trigonometric.h  wood.h  (+2 more)
inspiration/: a.out  csrch.cpp  dcsrch.c  dcsrch.cpp  dcstep.c  dcstep.cpp  line_search.h  line_search_test.cpp  main.c  main.cpp  point.h  se90.f  test.out
modules/: FindATLAS.cmake
src/: CMakeLists.txt  matrix.cpp  vector.cpp
test/: CMakeLists.txt  diagco_f.out  f.out  factorisation.cpp  line_search.cpp  linear_algebra.cpp  norms.cpp  operations.cpp  optimise.cpp  test_bfgs.cpp  test_factorisations.cpp  test_fletcher_reeves.cpp  test_functions.cpp  test_line_search.cpp  test_mcstep.cpp  test_newton.cpp  test_nonlinear_cg.cpp  test_optimise.cpp  test_steepest_descent.cpp  test_utilities.hpp
test/finite_differences/: CMakeLists.txt  finite_differences.cpp  test_finite_differences.cpp  test_functions.cpp  test_functions.hpp
test/line_search/: backtracking.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  GenerateTestFunctions.hs  Makefile  TestHeader.hs  cmake_install.cmake  factorisation.cpp  factorisation_test.cpp  line_search_functions.h  more_garbow_hillstrom_test_functions.h  more_thuente_test.cpp  optimise.cpp  optimise_test.cpp  test_function_template.h  test_functions.cpp  test_functions_test.cpp  test_utilities.h
tests/finite_differences/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  finite_differences.cpp  test_finite_differences.cpp  test_functions.cpp  test_functions.h
tests/line_search/: CMakeLists.txt  backtracking.cpp  more_thuente.cpp  more_thuente_degenerate.cpp
tests/ook/: test_bfgs.cpp  test_factorisations.cpp  test_functions.cpp  test_line_search.cpp  test_mcstep.cpp  test_newton.cpp  test_optimise.cpp
tests/ook/finite_differences/: test_finite_differences.cpp  test_functions.cpp
tools/: GenerateTestFunctions.hs  TestHeader.hs
(+78 files in other folders)
